Closed
Bug 1405397
Opened 8 years ago
Closed 8 years ago
Unable to scroll properly in vertically with scrollbar on certain page
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | + | verified |
People
(Reporter: alice0775, Assigned: tnikkel)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
3.02 KB,
patch
|
mstange
:
review+
|
Details | Diff | Splinter Review |
|
4.51 KB,
patch
|
mstange
:
review+
|
Details | Diff | Splinter Review |
[Tracking Requested - why for this release]: Broken scroll with scrollbar
+++ This bug was initially created as a clone of Bug #1383568 +++
Reproducible : always
Steps To Reproduce:
1. Maximized window
2. Open https://abema.tv/timetable (It may be available only in the region of Japan)
Wait to load page
3. Click [x] button if small popup display at center of page
4. Attempt to scroll in vertically with dragging thumb up and down
And/or Attempt to scroll in vertically with clicking scrollbar empty area and arrow buttons.
Steps To Reproduce:
1. Maximized window
2. Open index.html in attachment 8889225 [details] zip file
3. Attempt to scroll in vertically with dragging thumb up and down.
And/or Attempt to scroll in vertically with clicking scrollbar empty area and arrow buttons.
Actual Results:
Unable to scroll properly.
The following problem occurs.
A. Clicking on scrollbar empty area and scroll arrow buttons(top/bottom) do not work.
B. While dragging vertical scroll-thumb, the contents also scroll in horizontally.
C. Sometimes, the thumb becomes undraggable. and Sometimes scroll position position is rewound.
STR: Repeat dragging thumb to the bottom and release mouse, and dragging to the top and release mouse.
Expected Results:
scroll properly.
Regression Window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=ce3e3c2f159845603124c4e1ee0b78a284713136&tochange=4c8b85e80aebb27cf3a5334c2c183e49636b9ece
Regressed by: Bug 1364295
| Reporter | ||
Updated•8 years ago
|
Has Regression Range: --- → yes
Has STR: --- → yes
| Assignee | ||
Comment 1•8 years ago
|
||
Assignee: nobody → tnikkel
Attachment #8917244 -
Flags: review?(mstange)
| Assignee | ||
Comment 2•8 years ago
|
||
Interested if you think we should condition uses of mWillBuildScrollableLayer on painting to the window as well to fully restore how things were before bug 1364295.
Attachment #8917245 -
Flags: review?(mstange)
| Assignee | ||
Updated•8 years ago
|
Attachment #8917245 -
Attachment is patch: true
Comment 3•8 years ago
|
||
Comment on attachment 8917244 [details] [diff] [review]
Part 1. Add scrollbars on the correct condition
Review of attachment 8917244 [details] [diff] [review]:
-----------------------------------------------------------------
I see. Thank you for the detailed description.
Attachment #8917244 -
Flags: review?(mstange) → review+
Comment 4•8 years ago
|
||
Comment on attachment 8917245 [details] [diff] [review]
Part 2. Only use one variable for displayport related things
Review of attachment 8917245 [details] [diff] [review]:
-----------------------------------------------------------------
I think this is reasonable, yes. The distinction between usingDisplayPort and mWillBuildScrollableLayer has always been a source of confusion to me.
Attachment #8917245 -
Flags: review?(mstange) → review+
Pushed by tnikkel@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/bda0ae08740f
Part 1. Only add scrollbars in the "ignore scroll frame" case if we are painting to the window. r=mstange
https://hg.mozilla.org/integration/mozilla-inbound/rev/d6fdc1d3b070
Part 2. ScrollFrameHelper::BuildDisplayList should only have one way to determine if we are using a displayport/building a async scrollable layer. r=mstange
Comment 6•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/bda0ae08740f
https://hg.mozilla.org/mozilla-central/rev/d6fdc1d3b070
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Updated•8 years ago
|
status-firefox56:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Depends on: 1409003
Updated•8 years ago
|
Updated•8 years ago
|
Flags: qe-verify+
Comment 11•8 years ago
|
||
I have managed to reproduce the issue described in comment 0 using Firefox 58.0a1 (BuildId:20171003220138).
This issue is verified fixed on Firefox 58.0b5 (BuildId:20171120142222) on Windows 10 64bit, macOS 10.12.6 and Ubuntu 14.04 64bit.
You need to log in
before you can comment on or make changes to this bug.
Description
•